<resources>
    <string name="app_name">Remind</string>
    <string name="today">Today</string>
    <string name="next_seven_days">Next 7 days</string>
    <string name="inbox">Inbox</string>
    <string name="add_list">Add List</string>
    <string name="settings">Settings</string>
    <string name="overdue">Overdue</string>
    <string name="completed">Completed</string>
    <string name="not_scheduled">Not Scheduled</string>
    <string name="input_task_name">Input task name</string>
    <string name="set_time">Set time</string>
    <string name="no_time">No Time</string>
    <string name="no_reminder">No reminder</string>
    <string name="no_repeat">No repeat</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="show_completed">Show Completed</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="reminder">Reminder</string>
    <string name="none">None</string>
    <string name="one_time">One time</string>
    <string name="five_mins_early">5 mins early</string>
    <string name="thirty_mins_early">30 mins early</string>
    <string name="one_hour_early">1 hr eatly</string>
    <string name="one_day_early">1 days early</string>
    <string name="three_day_early">3 days early</string>
    <string name="one_week_early">1 week early</string>
    <string name="two_day_early">2 days early</string>
    <string name="repeat">Repeat</string>
    <string name="daily">Daily</string>
    <string name="every_weekday">Every Weekday(Mon-Fri)</string>
    <string name="weekly">Weekly(Tue)</string>
    <string name="monthly">Monthly(The 20 day)</string>
    <string name="yearly">Yearly(Oct 20)</string>
    <string name="bono_reminder">Bono reminder</string>
    <string name="jump">Jump</string>
    <string name="select_all">Select all</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="add_note">Add note</string>
    <string name="input_note">Input your note here...</string>
    <string name="list_title">List Title</string>


</resources>