<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    tools:context=".ui.EditActivity">

    <include layout="@layout/layout_actionbar"
        android:id="@+id/action" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/action"
        app:layout_constraintLeft_toLeftOf="parent"
        android:button="@null"
        android:layout_marginTop="32dp"
        android:background="@drawable/item_completed_checkbox"/>

    <EditText
        android:id="@+id/et_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        app:layout_constraintLeft_toRightOf="@id/checkbox"
        android:background="@color/write"
        android:layout_marginLeft="10dp"
        android:hint="@string/input_task_name"
        android:textSize="20sp"
        android:textColor="#333333"
        android:fontFamily="@font/inter_medium"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#10000000"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/set_time"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_set_time"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_time"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:drawableLeft="@mipmap/time"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <ImageButton
        android:id="@+id/ib_clear_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_set_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_time"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>


    <TextView
        android:id="@+id/tv_set_remind"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/no_reminder"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@mipmap/reminder"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/tv_set_time"/>

    <ImageButton
        android:id="@+id/ib_clear_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_set_remind"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_remind"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>

    <TextView
        android:id="@+id/tv_set_repeat"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/no_repeat"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@mipmap/recycle"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/tv_set_remind"/>

    <ImageButton
        android:id="@+id/ib_clear_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_set_repeat"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_repeat"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>

    <TextView
        android:id="@+id/tv_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:layout_marginTop="32dp"
        android:textColor="#333333"
        android:textSize="14sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_set_repeat"
        app:layout_constraintLeft_toLeftOf="@id/tv_set_repeat"/>

    <EditText
        android:id="@+id/et_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_add_note"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="16dp"
        android:hint="@string/input_note"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="8"
        android:gravity="top"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#FBF9E8"
        android:layout_margin="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>