<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/ib_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_time"
        app:layout_constraintRight_toLeftOf="@id/ib_next"
        android:layout_marginRight="18dp"
        android:background="@mipmap/previous"/>

    <ImageButton
        android:id="@+id/ib_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_time"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@mipmap/next"/>

    <com.necer.view.WeekBar
        android:id="@+id/weekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_time"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"/>

    <com.necer.calendar.MonthCalendar
        android:id="@+id/monthCalendar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/weekBar"
        app:layout_constraintLeft_toLeftOf="@id/weekBar"
        app:layout_constraintRight_toRightOf="@id/weekBar"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/set_time"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/monthCalendar"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"/>



    <TextView
        android:id="@+id/tv_set_time"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_time"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:drawableLeft="@mipmap/time"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <ImageButton
        android:id="@+id/ib_clear_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_set_time"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_time"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>

    <TextView
        android:id="@+id/tv_set_remind"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="16dp"
        android:text="@string/no_reminder"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:drawableLeft="@mipmap/reminder"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/tv_set_time"/>

    <ImageButton
        android:id="@+id/ib_clear_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_set_remind"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_remind"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>


    <TextView
        android:id="@+id/tv_set_repeat"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/no_repeat"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:drawableLeft="@mipmap/recycle"
        android:drawablePadding="12dp"
        android:textColor="#40000000"
        app:layout_constraintTop_toBottomOf="@id/tv_set_remind"/>

    <ImageButton
        android:id="@+id/ib_clear_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_set_repeat"
        app:layout_constraintBottom_toBottomOf="@id/tv_set_repeat"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:background="@mipmap/delete2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
